@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+  * [#5] ExpandDL support for expanding distribution lists (FunkyShu)
+
 1.141040  2014-04-14 21:05:15 Europe/London
 
   * Retrieve other user calendar items (retupmoca)
